#21: show last posts on home page

--- a/dimgem/templates/home.html
+++ b/dimgem/templates/home.html
@@ -1,4 +1,124 @@
 {% extends "base.html" %}
 {% block content %}
-	Cześć!
+	<label>Ostatnie posty w każdej z kategorii:</label>
+	<hr>
+	<div>
+		<h4>DIM -> Gramatyka</h4>
+	</div>
+	<div>
+		{% if dim_grammar_posts %}
+			{% for post in dim_grammar_posts %}
+				<div class="container-header">
+					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+				</div>
+			{% endfor %}
+		{% else %}
+			Nie było jeszcze postów w tej kategorii
+		{% endif %}
+	</div>
+	<hr>
+	<div>
+		<h4>DIM -> Słownictwo</h4>
+	</div>
+	<div>
+		{% if dim_vocabulary_posts %}
+			{% for post in dim_vocabulary_posts %}
+				<div class="container-header">
+					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+				</div>
+			{% endfor %}
+		{% else %}
+			Nie było jeszcze postów w tej kategorii
+		{% endif %}
+	</div>
+	<hr>
+	<div>
+		<h4>DIM -> Ciekawostki</h4>
+	</div>
+	<div>
+		{% if dim_curiosities_posts %}
+			{% for post in dim_curiosities_posts %}
+				<div class="container-header">
+					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+				</div>
+			{% endfor %}
+		{% else %}
+			Nie było jeszcze postów w tej kategorii
+		{% endif %}
+	</div>
+	<hr>
+	<div>
+	<h4>DIM -> False friends</h4>
+	</div>
+	<div>
+		{% if dim_false_friends_posts %}
+			{% for post in dim_false_friends_posts %}
+				<div class="container-header">
+					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+				</div>
+			{% endfor %}
+		{% else %}
+			Nie było jeszcze postów w tej kategorii
+		{% endif %}
+	</div>
+	<hr>
+	<div>
+		<h4>GEM -> Gramatyka</h4>
+	</div>
+	<div>
+		{% if gem_grammar_posts %}
+			{% for post in gem_grammar_posts %}
+				<div class="container-header">
+					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+				</div>
+			{% endfor %}
+		{% else %}
+			Nie było jeszcze postów w tej kategorii
+		{% endif %}
+	</div>
+	<hr>
+	<div>
+		<h4>GEM -> Słownictwo</h4>
+	</div>
+	<div>
+		{% if gem_vocabulary_posts %}
+			{% for post in gem_vocabulary_posts %}
+				<div class="container-header">
+					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+				</div>
+			{% endfor %}
+		{% else %}
+			Nie było jeszcze postów w tej kategorii
+		{% endif %}
+	</div>
+	<hr>
+	<div>
+		<h4>GEM -> Ciekawostki</h4>
+	</div>
+	<div>
+		{% if gem_curiosities_posts %}
+			{% for post in gem_curiosities_posts %}
+				<div class="container-header">
+					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+				</div>
+			{% endfor %}
+		{% else %}
+			Nie było jeszcze postów w tej kategorii
+		{% endif %}
+	</div>
+	<hr>
+	<div>
+	<h4>GEM -> False friends</h4>
+	</div>
+	<div>
+		{% if gem_false_friends_posts %}
+			{% for post in gem_false_friends_posts %}
+				<div class="container-header">
+					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+				</div>
+			{% endfor %}
+		{% else %}
+			Nie było jeszcze postów w tej kategorii
+		{% endif %}
+	</div>
 {% endblock %}
