#62: change post text by superuser

--- a/dimgem/static/css/style.css
+++ b/dimgem/static/css/style.css
@@ -173,3 +173,12 @@ h4 {
 .posts-title-form, .posts-title-list {
 	margin: 30px;
 }
+
+.change-post-text-form {
+	display: none;
+}
+
+.js-change-post-text-show-form {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
