fix stupid mistake

--- a/dimgem/templates/home.html
+++ b/dimgem/templates/home.html
@@ -9,7 +9,7 @@
 		{% if dim_grammar_posts %}
 			{% for post in dim_grammar_posts %}
 				<div class="container-header">
-					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+					{{ post.posted_date|date:"d.m.Y" }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
 				</div>
 			{% endfor %}
 		{% else %}
@@ -24,7 +24,7 @@
 		{% if dim_vocabulary_posts %}
 			{% for post in dim_vocabulary_posts %}
 				<div class="container-header">
-					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+					{{ post.posted_date|date:"d.m.Y" }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
 				</div>
 			{% endfor %}
 		{% else %}
@@ -39,7 +39,7 @@
 		{% if dim_curiosities_posts %}
 			{% for post in dim_curiosities_posts %}
 				<div class="container-header">
-					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+					{{ post.posted_date|date:"d.m.Y" }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
 				</div>
 			{% endfor %}
 		{% else %}
@@ -54,7 +54,7 @@
 		{% if dim_false_friends_posts %}
 			{% for post in dim_false_friends_posts %}
 				<div class="container-header">
-					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+					{{ post.posted_date|date:"d.m.Y" }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
 				</div>
 			{% endfor %}
 		{% else %}
@@ -69,7 +69,7 @@
 		{% if gem_grammar_posts %}
 			{% for post in gem_grammar_posts %}
 				<div class="container-header">
-					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+					{{ post.posted_date|date:"d.m.Y" }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
 				</div>
 			{% endfor %}
 		{% else %}
@@ -84,7 +84,7 @@
 		{% if gem_vocabulary_posts %}
 			{% for post in gem_vocabulary_posts %}
 				<div class="container-header">
-					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+					{{ post.posted_date|date:"d.m.Y" }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
 				</div>
 			{% endfor %}
 		{% else %}
@@ -99,7 +99,7 @@
 		{% if gem_curiosities_posts %}
 			{% for post in gem_curiosities_posts %}
 				<div class="container-header">
-					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+					{{ post.posted_date|date:"d.m.Y" }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
 				</div>
 			{% endfor %}
 		{% else %}
@@ -114,7 +114,7 @@
 		{% if gem_false_friends_posts %}
 			{% for post in gem_false_friends_posts %}
 				<div class="container-header">
-					{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
+					{{ post.posted_date|date:"d.m.Y" }}K: <a class="js-anchor" data-post-id="{{ post.id }}" href="{{ post.url }}">{{ post.title }}</a>
 				</div>
 			{% endfor %}
 		{% else %}
