#40: fix GEM on home page

--- a/dimgem/templates/home.html
+++ b/dimgem/templates/home.html
@@ -70,7 +70,7 @@
 			</a>
 		</div>
 		<div class="box">
-			<h5><a href="{% url 'gem_vocabulary' %}">DIM Słownictwo</a></h5>
+			<h5><a href="{% url 'gem_vocabulary' %}">GEM Słownictwo</a></h5>
 			<a class="post js-anchor" data-post-id="{{ gem_vocabulary_post.id }}" href="{{ gem_vocabulary_post.url }}">
 				<span>{{ gem_vocabulary_post.posted_date|date:"d.m.Y" }}</span>
 				{{ gem_vocabulary_post.title }}
@@ -82,7 +82,7 @@
 			</a>
 		</div>
 		<div class="box">
-			<h5><a href="{% url 'gem_curiosities' %}">DIM Ciekawostki</a></h5>
+			<h5><a href="{% url 'gem_curiosities' %}">GEM Ciekawostki</a></h5>
 			<a class="post js-anchor" data-post-id="{{ gem_curiosities_post.id }}" href="{{ gem_curiosities_post.url }}">
 				<span>{{ gem_curiosities_post.posted_date|date:"d.m.Y" }}</span>
 				{{ gem_curiosities_post.title }}
@@ -94,7 +94,7 @@
 			</a>
 		</div>
 		<div class="box">
-			<h5><a href="{% url 'gem_false_friends' %}">DIM False friends</a></h5>
+			<h5><a href="{% url 'gem_false_friends' %}">GEM False friends</a></h5>
 			<a class="post js-anchor" data-post-id="{{ gem_false_friends_post.id }}" href="{{ gem_false_friends_post.url }}">
 				<span>{{ gem_false_friends_post.posted_date|date:"d.m.Y" }}</span>
 				{{ gem_false_friends_post.title }}
